--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,18 @@
 {
     "manifest_version": 3,
-    "name": "Tab Synchronizer Extension",
+    "name": "Tab Sync",
     "version": "1.0",
-    "permissions": [
-      "storage",
-      "tabs"
-    ],
+    "permissions": ["tabs", "storage"],
     "background": {
       "service_worker": "background.js"
     },
+    "host_permissions": ["https://tab-sync-worker.ryanzhou147.workers.dev"],
     "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
+      "default_popup": "popup.html"
     },
-    "icons": {
+  "icons": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
-    }
   }
-  
+}
