--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,11 @@
   "description": "A simple counter extension that syncs with a Flask server.",
   "permissions": ["storage", "activeTab", "scripting"],
   "host_permissions": ["http://127.0.0.1:5000/"],
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
